# CredTech-Hackathon

./: README.md  main.py  pyproject.toml
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/config/: settings.py
backend/app/models/: credit_scorer.py
backend/app/services/: cache_service.py  data_ingestion.py  processing.py
